# AIRA

./: .env  .env.example  .gitignore  FULL_FEATURE_AUDIT.md  coxtent.md  docker-compose.yml  package-lock.json  package.json  render.yaml  start.sh  start_backend.sh  start_frontend.sh
app/: globals.css
backend/: .gitignore  Cargo.toml  Dockerfile  livekit_admin.db
backend/api/: Dockerfile  apply_schema.py  init.sql  main.py  requirements.txt  webhook_schema.sql  webhooks.py
backend/migrations/: 20260204092336_create_users_table.sql  20260210000000_create_comprehensive_schema.sql  20260213000000_create_webhook_and_error_tables.sql
backend/src/: main.rs
backend/src/config/: database.rs
backend/src/entity/: agent_instances.rs  agent_logs.rs  agent_metrics.rs  agent_rooms.rs  agents.rs  error_logs.rs  mod.rs  prelude.rs  users.rs  webhook_deliveries.rs  webhook_events.rs
backend/src/handlers/: auth.rs
backend/src/handlers/agents/: deploy.rs  lifecycle.rs  logs.rs  metrics.rs  rooms.rs
backend/src/handlers/auth/: mod.rs
backend/src/handlers/egress/: mod.rs
backend/src/handlers/ingress/: mod.rs
backend/src/handlers/livekit/: api_keys.rs  health.rs  rooms.rs  token.rs
backend/src/handlers/metrics/: mod.rs
backend/src/handlers/projects/: mod.rs
backend/src/handlers/settings/: mod.rs
backend/src/handlers/sip/: mod.rs
backend/src/handlers/transcripts/: mod.rs
backend/src/handlers/webhook/: mod.rs
backend/src/models/: agents.rs  auth.rs  ingress.rs  livekit.rs  projects.rs  sip.rs  transcripts.rs
backend/src/routes/: agents.rs  auth_routes.rs  livekit.rs  metrics.rs  mod.rs  sip.rs  transcripts.rs  webhook.rs  websocket.rs
backend/src/services/: livekit_service.rs
backend/src/utils/: error.rs  jwt.rs  mod.rs  password.rs
components/: Charts.tsx
frontend/: .dockerignore  (+4 more)
(+117 files in other folders)
