[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

dotenvy = "0.15"

sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }

argon2 = "0.5"
rand_core = "0.6"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "1", features = ["v4"] }

tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.3", features = ["cors"] }
