[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

dotenvy = "0.15"

sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "with-uuid", "with-chrono", "sqlx-all"] }

argon2 = "0.5"
rand_core = "0.6"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "1", features = ["v4"] }
rust_decimal = "1.33"

# For migrations
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }

tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["cors", "trace", "limit", "timeout", "compression-gzip"] }

# LiveKit integration
livekit-api = "0.4"
livekit-protocol = "0.7"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
anyhow = "1"

# Metrics
prometheus = "0.13"

# Webhook verification
hmac = "0.12"
sha2 = "0.10"

# Additional dependencies
serde_yaml = "0.9"
rand = "0.8"
futures-util = "0.3"
once_cell = "1"
